--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/tour_logo.png" type="image/x-icon">
+
     <title>TourMama Express_Vromoner Ultimate Mama</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -17,13 +21,14 @@
       <!-- banner section -->
   <div id="banner_container">
       <div id="banner">
+
         <div class="banner_content">
             <h1>From Southeast Asia <span>to the World</span></h1>
             <p>Stay updated with travel tips, recommendations,and latest promos.</p>
 
             <div id="button_box">
                <button class="btn">Get Starter</button>
-               <button class="white_btn">Demo</button>
+               <button class="white_btn">Watch Demo</button>
             </div>
         </div>
 
@@ -39,25 +44,25 @@
     <div id="service">
       <div class="heading_content">
         <h4>SERVICES</h4>
-        <h2>Why book using Travelo</h2>
+        <h2>Why book using Tour Mama Expess</h2>
       </div>
       <div id="service_card_container">
 
-        <!-- card-1 -->
+        <!--  service card-1 -->
         <div class="service_card">
           <img src="images/bag.png" alt="">
           <h2>All You Needs</h2>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
         </div>
 
-        <!-- card-2 -->
+        <!--  service card-2 -->
         <div class="service_card">
           <img src="images/books.png" alt="">
           <h2>Flexible Booking</h2>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
         </div>
 
-        <!-- card-3 -->
+        <!-- service card-3 -->
         <div class="service_card">
           <img src="images/card.png" alt="">
           <h2>Secure Payment</h2>
@@ -114,6 +119,9 @@
         <h2>BHUTAN</h2>
         <h2>CHINA</h2>
         <h2>JAPAN</h2>
+        <h2>DUBAI</h2>
+        <h2>THAILAND</h2>
+        <h2>SINGAPUR</h2>
       </div>
 
 
