--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <div class="review_footer">
           <div class="review_footer_content"> 
-            <h4>Ferdous Zihad</h4>
+            <h4>Sainul Islam Lisan</h4>
             <p>Software Engineer(L1) Programming-Hero</p>
          </div>
          
@@ -157,7 +157,7 @@
 
           <div class="review_footer">
             <div class="review_footer_content"> 
-              <h4>Ferdous Zihad</h4>
+              <h4>Sainul Islam Lisan</h4>
               <p>Software Engineer(L1) Programming-Hero</p>
           </div>
 
